tests/ui/never_type/basic/call-fn-never-arg-wrong-type.stderr
error[E0308]: mismatched types
  --> $DIR/call-fn-never-arg-wrong-type.rs:10:9
   |
LL |     foo("wow");
   |     --- ^^^^^ expected `!`, found `&str`
   |     |
   |     arguments to this function are incorrect
   |
   = note:   expected type `!`
           found reference `&'static str`
note: function defined here
  --> $DIR/call-fn-never-arg-wrong-type.rs:5:4
   |
LL | fn foo(x: !) -> ! {
   |    ^^^ ----

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
